--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }    
 
 h1 {
-    background-color: #ff555b;
+    background-color: #ff2a75;
     padding-top: 20px;
     padding-bottom: 20px;
     box-shadow: 3px 3px #555;
@@ -19,26 +19,20 @@ text-align: center;
     font-size: 11px;
 }
 
-#buttons {
-    margin-top: 25px;
-}
-
 #endresults {
     font-weight: bold;
 }
 
+#buttons {
+    margin-top: 25px;
+}
+
 #buttons button {
-    /* width: 150px;
-    height: 50px; 
-    margin-left: 20px;
-    margin-right: 20px; 
-    background-color: #ffa755; 
-    font-size: 18px; */
     background-color: #ffea00;
     margin-left: 10px;
     margin-right: 10px; 
     padding: 0px;
-    border-radius: 5px;
+    border-radius: 8px;
     box-shadow: 2px 2px #56fff2;
 }
 
@@ -52,7 +46,10 @@ text-align: center;
 #scores {
     margin: auto;
     width: 400px;
-    border-style: double;
+    border-style: solid;
+    border-radius: 8px;
+    border-color: #77fff4;
+    box-shadow: 3px 3px #555;
 }
 
 #scores p {
